--- a/jdbclib/build.gradle
+++ b/jdbclib/build.gradle
@@ -2,7 +2,9 @@ version '0.0.1'
 
 dependencies {
     compile project(':concurrent_util')
-//    compile 'ru.sbt.util:concurrent_util:0.0.1'
+    compile project(':batcher')
+    compile 'one.util:streamex:0.6.6'
+
     compile 'org.slf4j:slf4j-api:1.7.24'
     compile 'org.postgresql:postgresql:42.2.1'
     compile 'com.zaxxer:HikariCP:2.7.7'
