Some minor fixes

--- a/PCAccessAPI/build.gradle
+++ b/PCAccessAPI/build.gradle
@@ -2,7 +2,9 @@ version '0.0.1'
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.24'
-    
+
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    testCompile 'ch.qos.logback:logback-classic:1.2.3'
 }
