--- a/PCAccessAPI/build.gradle
+++ b/PCAccessAPI/build.gradle
@@ -1,4 +1,4 @@
-version '0.0.10'
+version '0.0.11'
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.24'
@@ -6,5 +6,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    testCompile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     testCompile 'ch.qos.logback:logback-classic:1.2.3'
 }
